progress being made on fortran

--- a/fortran/Makefile
+++ b/fortran/Makefile
@@ -8,7 +8,8 @@ AR      = ar
 RANLIB  = ranlib
 
 FFLAGS  = -O2 -Wall
-FLIBS   = -lgfortran -lm
+FLIBS   = -lgfortran -lgfortranbegin -lm -lgcc_s
+FLIBS   = -lgfortran -lm 
 FLINK   = $(FORT) $(FFLAGS) -o $@
 
 .f.o:
@@ -41,7 +42,7 @@ $(EXAMPLE1): $(EXAMPLE1).o libxdi.a
 	$(FLINK) $(EXAMPLE1).o -L. -lxdi -o $(EXAMPLE1)  $(FLIBS)
 
 clean :
-	rm -f $(OBJ) $(EXAMPLE1) libxdi.a
+	rm -f $(OBJ) $(EXAMPLE1).o $(EXAMPLE1) libxdi.a
 
 install: $(EXAMPLE1) 
 	cp $(EXAMPLE1) $(INSTALLDIR)/$(EXAMPLE1)
