--- a/c/Makefile.in
+++ b/c/Makefile.in
@@ -34,7 +34,7 @@ $(EXAMPLE1).o: $(EXAMPLE1).c
 default: $(EXAMPLE1)
 
 strutil.o: strutil.h
-xdifile.o: xdifile.h strutil.h
+xdifile.o: xdifile.h xdi_tokens.h strutil.h
 
 
 $(LIBXDIF): $(XDIF_OBJ)
