--- a/c/Makefile.in
+++ b/c/Makefile.in
@@ -19,13 +19,14 @@ libdir = @libdir@
 
 # you shouldn't have to alter anything below this line
 #---------------------------------
-EXAMPLE1 = xdi_example1
+EXAMPLE1  = xdi_example1
 LIBXDIF   = libxdifile.a
-XDIF_OBJ = xdifile.o strutil.o
+LIBSHARED = libxdifile.so
+XDIF_OBJ  = xdifile.o strutil.o
 
 LINKXDIF = -L$(libdir) -L. -lxdifile
 
-all: $(EXAMPLE1)
+all: $(EXAMPLE1)  $(LIBSHARED)
 
 $(EXAMPLE1).o: $(EXAMPLE1).c
 
@@ -36,14 +37,18 @@ default: $(EXAMPLE1)
 strutil.o: strutil.h
 xdifile.o: xdifile.h xdi_tokens.h strutil.h
 
-
 $(LIBXDIF): $(XDIF_OBJ)
 	@rm -f $@
 	$(AR) cru $(LIBXDIF) $(XDIF_OBJ)
 	$(RANLIB) $(LIBXDIF)
 
-$(EXAMPLE1): $(LIBXDIF) $(EXAMPLE1).o
-	$(LINK) -o $(EXAMPLE1)  $(EXAMPLE1).o $(LINKXDIF)
+$(LIBSHARED): $(XDIF_OBJ)
+	@rm -f $@
+	$(LINK) -shared -o $@ $(XDIF_OBJ)
+
+$(EXAMPLE1): $(LIBSHARED) $(EXAMPLE1).o
+	$(LINK) -o $(EXAMPLE1)  $(EXAMPLE1).o $(LIBSHARED)
+###	$(LINK) -o $(EXAMPLE1)  $(EXAMPLE1).o $(LINKXDIF)
 
 clean :
 	rm -f $(XDIF_OBJ) $(EXAMPLE1).o $(EXAMPLE1) $(LIBXDIF)
