support for shared object lib, MacOS only(\!)... needs improvement

--- a/c/Makefile.in
+++ b/c/Makefile.in
@@ -23,7 +23,9 @@ EXAMPLE1  = xdi_example1
 LIBXDIF_STATIC   = libxdifile.a
 LIBXDIF_SHARED = libxdifile.so
 XDIF_OBJ  = xdifile.o strutil.o
-
+CCOPTS = -arch i386 -arch x86_64
+SHARED = $(CCOPTS) -shared
+CC = gcc $(CCOPTS)
 LINKXDIF = -L$(libdir) -L. -lxdifile
 
 all: $(EXAMPLE1) $(LIBXDIF_STATIC) $(LIBXDIF_SHARED)
@@ -44,13 +46,13 @@ $(LIBXDIF_STATIC): $(XDIF_OBJ)
 
 $(LIBXDIF_SHARED): $(XDIF_OBJ)
 	@rm -f $@
-	$(LINK) -shared -o $@ $(XDIF_OBJ)
+	$(LINK) $(SHARED) -o $@ $(XDIF_OBJ)
 
 $(EXAMPLE1): $(LIBXDIF_SHARED) $(EXAMPLE1).o
 	$(LINK) -o $(EXAMPLE1)  $(EXAMPLE1).o $(LIBXDIF_SHARED)
 
 clean :
-	rm -f $(XDIF_OBJ) $(EXAMPLE1).o $(EXAMPLE1) $(LIBXDIF_STATIC)
+	rm -f $(XDIF_OBJ) $(EXAMPLE1).o $(EXAMPLE1) $(LIBXDIF_STATIC) $(LIBXDIF_SHARED)
 
 install: $(LIBXDIF_STATIC)  $(LIBXDIF_SHARED)
 	cp -pr $(LIBXDIF_STATIC) $(libdir)/$(LIBXDIF_STATIC)
