New perl interface Also modified installation of C interface so that header files areinstalled to /usr/local/include

--- a/.gitignore
+++ b/.gitignore
@@ -3,8 +3,44 @@
 *.a
 *~
 *#
+
+c/autom4te.cache/*
+c/Makefile
+c/aclocal.m4
+c/config.h
+c/config.h.in
+c/config.log
+c/config.status
+c/configure
+c/libxdifile.so
+c/stamp-h1
+c/xdi_reader
+
+fortran/Makefile
+fortran/config.h
+fortran/config.log
+fortran/config.status
+fortran/stamp-h1
+fortran/xdi_example1
+
+python/build/*
+
+perl/_Inline
 perl/_build
 perl/blib
 perl/Build
 perl/META.yml
 perl/MYMETA.yml
+perl/MYMETA.json
+perl/Makefile
+perl/XDIFile.inl
+perl/pm_to_blib
+_Inline/*
+
+*.aux
+*.dvi
+*.nav
+*.out
+*.snm
+*.toc
+doc/Poster_XAFS15/XDI_Poster.log
