--- a/.gitignore
+++ b/.gitignore
@@ -54,6 +54,5 @@ doc/Poster_XAFS15/XDI_Poster.log
 
 specification/auto/*
 specification/background_inner.tex
-specification/spec_inner.tex
-specification/xdi_background.log
-specification/xdi_spec.log
+specification/*_inner.tex
+specification/xdi_*.log
