make xdi_reader.o depend on headers

--- a/c/Makefile.in
+++ b/c/Makefile.in
@@ -38,7 +38,7 @@ LINKXDIF = -L$(libdir) -L. -lxdifile
 
 all: $(READER) $(LIBXDIF_STATIC) $(LIBXDIF_SHARED)
 
-$(READER).o: $(READER).c
+$(READER).o: $(READER).c $(XDIHEADERS)
 
 .PHONY: clean install default
 
