--- a/lib/Makefile.in
+++ b/lib/Makefile.in
@@ -31,7 +31,7 @@ LIBXDIF_SHARED = libxdifile.so
 LIBXDIF_DYLIB = libxdifile.dylib
 LIBXDIF_DLL = xdifile.dll
 XDIHEADERS = strutil.h xdifile.h
-XDIF_OBJ  = xdifile.o strutil.o slre.o
+XDIF_OBJ  = xdifile.o strutil.o
 SHARED = $(CCOPTS) -shared
 CC = @CC@ $(CCOPTS)
 LINKXDIF = -L$(libdir) -L. -lxdifile
@@ -45,8 +45,7 @@ $(READER).o: $(READER).c $(XDIHEADERS)
 default: $(READER)
 
 strutil.o: strutil.h
-xdifile.o: xdifile.h strutil.h slre.h
-slre.o:  slre.h
+xdifile.o: xdifile.h strutil.h
 
 $(LIBXDIF_STATIC): $(XDIF_OBJ)
 	@rm -f $@
@@ -58,7 +57,7 @@ $(LIBXDIF_SHARED): $(XDIF_OBJ)
 	$(LINK) $(SHARED) -o $@ $(XDIF_OBJ)
 
 $(READER): $(LIBXDIF_STATIC) $(READER).o
-	$(LINK) -o $(READER)  $(READER).o $(LIBXDIF_STATIC)
+	$(LINK) -o $(READER)  $(READER).o $(LIBXDIF_STATIC) -lpcre
 
 clean:
 	rm -f $(XDIF_OBJ) $(READER).o $(READER) $(LIBXDIF_STATIC) $(LIBXDIF_SHARED) $(LIBXDIF_DYLIB) $(LIBXDIF_DLL)
